--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,33 @@
-# IntelliJ IDEA files
+HELP.md
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### IntelliJ IDEA ###
+.idea
+*.iws
 *.iml
 *.ipr
-*.iws
-*.idea/
 
-# Windows files
-Thumbs.db
-desktop.ini
-
-# Java build files
-target/
-out/
-*.class
-
-# Gradle files
-.gradle/
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
 build/
+!**/src/main/**/build/
+!**/src/test/**/build/
 
-# IntelliJ IDEA system files
-*.log
-*.tmp
-*.temp
-
-# Other files
-*.DS_Store
-*.swp
+### VS Code ###
+.vscode/
